# rust-token-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  client_test.sh  client_validator_test.sh  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker_build_push.yml
axum/sample-keys/: ed25519.private_key.pem  p256.private_key.pem
axum/src/: log.rs  state.rs
axum/src/apis/: create_user.rs  response.rs  update_user.rs
axum/src/config/: subcmd_admin.rs  subcmd_run.rs
axum/src/entity/: username.rs
axum/src/jwt/: token.rs
axum/src/table/: refresh_table.rs
client/: Cargo.toml
client/src/: auth.rs  constants.rs  error.rs  lib.rs  message.rs  token.rs
common/: Cargo.toml
common/src/: claim.rs  constants.rs  lib.rs  rsa_blind.rs  token.rs  token_outer.rs  validation_key.rs
common/src/token_fields/: client_apps.rs  id_token.rs  issuer.rs  metadata.rs  mod.rs  refresh_token.rs  subscriber_id.rs
docker/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
docker-bin/: entrypoint.sh  run.sh
lib-client/: Cargo.toml
lib-client/src/: auth.rs  auth_blind.rs  constants.rs  error.rs  lib.rs  message.rs
lib-validator/: Cargo.toml
lib-validator/src/: constants.rs  error.rs  lib.rs  log.rs  validation_key.rs  validator.rs
lib-verifier/: Cargo.toml
migrations/: 20230328132011_init.sql
server/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
server/docker-bin/: run.sh
server/sample-keys/: ed25519.public_key.pem
server/src/: argon2.rs  constants.rs  error.rs  main.rs  state.rs
server/src/apis/: blind_jwks.rs  blind_sign.rs  create_user.rs  delete_user.rs  get_tokens.rs  health_check.rs  jwks.rs  list_users.rs  mod.rs  refresh.rs  request.rs  response.rs  update_user.rs
server/src/config/: mod.rs  parse_opts.rs  subcmd_run.rs
server/src/entity/: client_apps.rs  mod.rs  password.rs  refresh_token_info.rs  subscriber_id.rs  user.rs
server/src/jwt/: jwt_key_pair.rs  mod.rs
server/src/table/: mod.rs  refresh_table.rs  user_table.rs
src/: argon2.rs  auth.rs  config.rs  constants.rs  db.rs  globals.rs  health_check.rs  jwt.rs  main.rs  request.rs  request_bearer_token.rs  response.rs  rocket_api_create_user.rs  rocket_api_jwks.rs  rocket_api_refresh.rs  rocket_api_submit_data.rs  rocket_api_token_checkflow.rs  rocket_api_tokens.rs  state.rs  utils.rs
src/apis/: get_tokens.rs  jwks.rs  mod.rs  refresh.rs  request.rs  response.rs
src/config/: mod.rs  subcmd_admin.rs  subcmd_run.rs
src/db/: mod.rs
src/db/entity/: user.rs
src/db/table/: mod.rs  user_table.rs
src/entity/: client_apps.rs  encoded_hash.rs  id_token.rs  issuer.rs  mod.rs  password.rs  refresh_token.rs  user.rs  username.rs
src/jwt/: alg.rs  jwt_key_pair.rs  jwt_signing_key.rs  mod.rs  token.rs  token_with_meta.rs
src/table/: mod.rs  refresh_table.rs  user_table.rs
