[package]
name = "rust-token-server"
description = "Authentication server handling id token in the context of OIDC"
version = "0.3.0"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "README.md"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.12", features = ["headers"] }
base64 = "0.21.0"
chrono = "0.4.24"
clap = { version = "4.2.1", default-features = false, features = [
  "std",
  "cargo",
  "wrap_help",
] }
jwt-simple = "0.11.4"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1.68"
uuid = { version = "1.3.0", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
rust-argon2 = "1.0.0"
jwt-compact = { version = "0.7.0", features = ["p256", "ed25519-compact"] }
url = "2.3.1"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
