[package]
name = "rust-token-server-common"
version = "0.1.0"
edition = "2021"
description = "Common library for `rust-token-server`"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "../README.md"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = "1.0.108"
jwt-compact = { version = "0.8.0", features = ["p256", "ed25519-compact"] }
anyhow = "1.0.75"
chrono = { version = "0.4.31", default-features = false }
validator = { version = "0.16", features = ["derive"] }
rand = "0.8.5"
base64 = "0.21.5"
tracing = "0.1.40"
pkcs8 = { version = "0.10.2", default-features = false, features = ["pem"] }
spki = { version = "0.7.3", default-features = false, features = ["pem"] }
sec1 = { version = "0.7.3", default-features = false }
ed25519-compact = "2.0.4"
sha2 = "0.10.8"
