[package]
name = "rust-token-server-common"
version = "0.1.0"
edition = "2021"
description = "Common library for `rust-token-server`"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "../README.md"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
serde_json = "1.0.117"
jwt-compact = { version = "0.8.0", features = ["p256", "ed25519-compact"] }
anyhow = "1.0.86"
chrono = { version = "0.4.38", default-features = false }
validator = { version = "0.16.1", features = ["derive"] }
rand = "0.8.5"
base64 = "0.22.1"
tracing = "0.1.40"
pkcs8 = { version = "0.10.2", default-features = false, features = ["pem"] }
spki = { version = "0.7.3", default-features = false, features = ["pem"] }
sec1 = { version = "0.7.3", default-features = false }
ed25519-compact = "2.1.1"
sha2 = "0.10.8"
