[package]
name = "rust-token-server-client"
version = "0.2.0"
edition = "2021"
description = "Client library for `rust-token-server`"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "../README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../common", package = "rust-token-server-common" }

tracing = "0.1.40"
anyhow = "1.0.79"
url = "2.5.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
chrono = "0.4.31"
tokio = { version = "1.35.1", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
async-trait = "0.1.77"
thiserror = "1.0.56"


[dev-dependencies]
reqwest = { version = "0.11.23", default-features = false, features = [
  "json",
  "trust-dns",
  "default",
] }
