[package]
name = "rust-token-server-client"
version = "0.3.0"
edition = "2021"
description = "Client library for `rust-token-server`"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "../README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../common", package = "rust-token-server-common" }

tracing = "0.1.40"
anyhow = "1.0.86"
url = "2.5.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
tokio = { version = "1.38.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
async-trait = "0.1.80"
thiserror = "1.0.61"


[dev-dependencies]
reqwest = { version = "0.12.4", default-features = false, features = [
  "json",
  "hickory-dns",
  "default",
] }
