[package]
name = "rust-token-server-client"
version = "0.4.0"
edition = "2021"
description = "Client library for `rust-token-server`"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "../README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../common", package = "rust-token-server-common", default-features = false }

tracing = "0.1.40"
anyhow = "1.0.86"
url = "2.5.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
tokio = { version = "1.38.0", features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
] }
async-trait = "0.1.80"
thiserror = "1.0.61"
rand = { version = "0.8.5", default-features = false, features = [
  "getrandom",
], optional = true }
base64 = { version = "0.22.1", optional = true }


[dev-dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
  "json",
  "hickory-dns",
  "default",
] }

[features]
default = ["blind-signatures"]
blind-signatures = ["libcommon/blind-signatures", "rand", "base64"]
