[package]
name = "rust-token-server-validator"
version = "0.1.0"
edition = "2021"
description = "Validator library for `rust-token-server`"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "../README.md"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tracing = "0.1.40"
async-trait = "0.1.74"
thiserror = "1.0.50"
url = "2.5.0"
jwt-simple = "0.12.1"
spki = { version = "0.7.3", default-features = false, features = [
  "pem",
  "alloc",
] }
serde_json = "1.0.108"
p256 = { version = "0.13.2", features = ["jwk"] }
base64 = "0.21.5"
futures = { version = "0.3.29", default-features = false, features = ["std"] }
tokio = { version = "1.34.0", default-features = false, features = [
  "net",
  "macros",
] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11.22", default-features = false, features = [
  "json",
  "trust-dns",
  "default",
] }
dotenvy = "0.15.7"
