[package]
name = "rust-token-server-validator"
version = "0.2.0"
edition = "2021"
description = "Validator library for `rust-token-server`"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "../README.md"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../common", package = "rust-token-server-common" }

anyhow = "1.0.79"
tracing = "0.1.40"
async-trait = "0.1.77"
thiserror = "1.0.57"
url = "2.5.0"
serde_json = "1.0.113"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
tokio = { version = "1.36.0", default-features = false, features = [
  "net",
  "macros",
] }
serde = { version = "1.0.196", default-features = false, features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11.24", default-features = false, features = [
  "json",
  "trust-dns",
  "default",
] }
dotenvy = "0.15.7"
