[package]
name = "rust-token-server-validator"
version = "0.3.0"
edition = "2021"
description = "Validator library for `rust-token-server`"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "../README.md"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../common", package = "rust-token-server-common", default-features = false }

anyhow = "1.0.86"
tracing = "0.1.40"
async-trait = "0.1.80"
thiserror = "1.0.61"
url = "2.5.1"
serde_json = "1.0.117"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
tokio = { version = "1.38.0", default-features = false, features = [
  "net",
  "macros",
] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
rustc-hash = "1.1.0"
base64 = "0.22.1"

[dev-dependencies]
reqwest = { version = "0.12.4", default-features = false, features = [
  "json",
  "hickory-dns",
  "default",
] }
dotenvy = "0.15.7"
libclient = { path = "../lib-client/", package = "rust-token-server-client", default-features = false, features = [
  "blind-signatures",
] }


[features]
default = ["blind-signatures"]
blind-signatures = ["libcommon/blind-signatures"]
