[package]
name = "rust-token-server"
description = "Authentication server handling id token in the context of OIDC and anonymous token based on RSA blind signatures"
version = "0.6.0"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/rust-token-server"
repository = "https://github.com/junkurihara/rust-token-server"
license = "MIT"
readme = "../README.md"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcommon = { path = "../common", package = "rust-token-server-common", default-features = false }

anyhow = "1.0.86"
axum = { version = "0.7.5" }
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["std", "cargo", "wrap_help"] }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
async-trait = "0.1.80"
uuid = { version = "1.9.1", features = ["v4"] }
validator = { version = "0.18.1", features = ["derive"] }
rust-argon2 = "2.1.0"
url = "2.5.2"

[features]
default = ["blind-signatures"]
blind-signatures = ["libcommon/blind-signatures"]
